--- a/hello/index.html
+++ b/hello/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>世界上最帅的人，是牛哥</title>
+	<title>世界上最美的女人，是老吸</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="生日礼物" />
-	<meta name="description" content="世界上最帅的人，是牛总 " />
+	<meta name="keywords" content="生日礼物，惊喜,有趣,最美" />
+	<meta name="description" content="世界上最美的女人，是老吸，但是她不喜欢我 ಥ_ಥ " />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
@@ -25,51 +25,51 @@ var _hmt = _hmt || [];
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.bilibili.com/video/av6951531/" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/1.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.bilibili.com/video/av7019615/index_2.html" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/2.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.bilibili.com/video/av7642689" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/3.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.youku.com/v_show/id_XMjc5NTQ3NzIw.html?from=s1.8-1-1.2&spm=a2h0k.8191407.0.0#paction" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/4.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.youku.com/v_show/id_XMTMzOTA3NDQyMA==.html?from=s1.8-1-1.2&spm=a2h0k.8191407.0.0" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/5.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.youku.com/v_show/id_XMjE3Mzg2NTA0.html?from=s1.8-1-1.2&spm=a2h0k.8191407.0.0" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/6.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="http://www.bilibili.com/video/av7311175/" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/7.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://timgsa.baidu.com/timg?image&quality=80&size=b10000_10000&sec=1483248476&di=0afb6ff6f37da3f1a65e9d3b4b628d54&imgtype=jpg&src=http%3A%2F%2Fh.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2Fb03533fa828ba61ed7a8d4514834970a304e590d.jpg" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/8.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://v.youku.com/v_show/id_XMTM1NzMyMTM0NA==.html?from=s1.8-1-1.2&spm=a2h0k.8191407.0.0" class="thumbnail">
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
 					<img src="img/9.jpg" alt="...">
 				</a>
 			</div>
